# brynhild-deno-plugin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: coding-standards.mdc  commit-plans.mdc  markdown-frontmatter.mdc  testing-policy.mdc  workflow-folder.mdc
brynhild_deno_plugin/: __init__.py  plugin.yaml
brynhild_deno_plugin/deno/: runner.ts
brynhild_deno_plugin/tools/: __init__.py  python_sandbox.py
scripts/: bundle-sources  commit-helper.py  smoke_test.py  vendor-pyodide.sh
tests/: test_python_sandbox.py
