[project]
name = "brynhild-deno-plugin"
version = "0.1.0"
description = "Sandboxed Python execution using Deno + Pyodide (WebAssembly)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Brynhild Team" }
]
keywords = ["brynhild", "plugin", "sandbox", "pyodide", "deno"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "brynhild>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.entry-points."brynhild.plugins"]
deno-sandbox = "brynhild_deno_plugin:register"

[project.entry-points."brynhild.tools"]
python_sandbox = "brynhild_deno_plugin.tools.python_sandbox:Tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brynhild_deno_plugin"]

